<resources>
    <string name="app_name">CS:GO Portfolio</string>
    <string name="error_screen_case_overview">Could not connect to the server, try again later</string>

    // start screen
    <string name="front_page_slogan">Invest Smart with CS:GO Portfolio Tracker</string>
    <string name="front_page_case_overview_button">Case Overview</string>
    <string name="front_page_portfolio_button">Portfolio</string>
    <string name="front_page_analytics_button">Case Analytics</string>

    // case details
    <string name="case_volume">Volume:</string>
    <string name="case_median_price">Median Price:</string>
    <string name="case_lowest_price">Lowest Price:</string>
    <string name="case_release_date">Release Date:</string>
    <string name="case_drop_status">Drop Status:</string>

    // case analytics new
    <string name="monthly_avg_return_in_percent_new">Return in \%%: %s</string>
    <string name="monthly_avg_return_in_rub_new">Return in $: %s</string>


    // case analytics
    <string name="monthly_avg_return_in_percent">Monthly percent return: %s</string>
    <string name="monthly_avg_return_in_rub">Monthly return in RUB: %s</string>
    <string name="monthly_standard_deviation">Monthly standard deviation: %s</string>
    <string name="monthly_sharp_ratio">Monthly Sharp ratio: %s</string>
    <string name="daily_avg_return_in_percent">Daily percent  return: %s</string>
    <string name="daily_avg_return_in_rub">Daily return in RUB: %s</string>
    <string name="daily_standard_deviation">Daily standard deviation: %s </string>
    <string name="daily_sharp_ratio">Daily Sharp ratio: %s</string>

    // Portfolio
    <string name="portfolio_total_value">Value: %s $</string>
    <string name="amount_of_cases">%s Cases</string>
    <string name="average_price">• %s $</string>
    <string name="overall_value">%s $</string>
    <string name="profit_loss">%s $ (1.75 \%%)</string>
    <string name="portfolio_value">Portfolio Value</string>
    <string name="portfolio_pie_chart_amount">Amount</string>
    <!--    (1.75 character \u0025)-->


    // Add Case
    <string name="add_case_case_name">Case Name:</string>
    <string name="add_case_number_of_cases">Number of cases:</string>
    <string name="add_case_purchase_price">Purchase price:</string>

    // Add Case Errors
    <string name="error_choose_case">Choose a case</string>
    <string name="error_unknown_case">Unknown case</string>

    <string name="error_enter_amount">Enter amount</string>
    <string name="error_amount_integer">Amount must be an integer</string>
    <string name="error_amount_positive">Amount must be &gt; 0</string>

    <string name="error_enter_price">Enter price</string>
    <string name="error_finish_decimal">Finish the number (e.g., 0.0)</string>
    <string name="error_price_number">Price must be a number</string>
    <string name="error_price_positive">Price must be &gt; 0</string>

    <string-array name="case_name_array">
        <item>Chroma Case</item>
        <item>Chroma 2 Case</item>
        <item>Chroma 3 Case</item>
        <item>Clutch Case</item>
        <item>CSGO Weapon Case</item>
        <item>CSGO Weapon Case 2</item>
        <item>CSGO Weapon Case 3</item>
        <item>CS20 Case</item>
        <item>Danger Zone Case</item>
        <item>eSports 2013 Case</item>
        <item>eSports 2013 Winter Case</item>
        <item>eSports 2014 Summer Case</item>
        <item>Falchion Case</item>
        <item>Fracture Case</item>
        <item>Gamma Case</item>
        <item>Gamma 2 Case</item>
        <item>Glove Case</item>
        <item>Horizon Case</item>
        <item>Huntsman Weapon Case</item>
        <item>Operation Bravo Case</item>
        <item>Operation Breakout Weapon Case</item>
        <item>Operation Broken Fang Case</item>
        <item>Operation Hydra Case</item>
        <item>Operation Phoenix Weapon Case</item>
        <item>Operation Vanguard Weapon Case</item>
        <item>Operation Wildfire Case</item>
        <item>Prisma Case</item>
        <item>Prisma 2 Case</item>
        <item>Revolver Case</item>
        <item>Shadow Case</item>
        <item>Shattered Web Case</item>
        <item>Spectrum Case</item>
        <item>Spectrum 2 Case</item>
        <item>Winter Offensive Weapon Case</item>
        <item>Snakebite Case</item>
        <item>Dreams &amp; Nightmares Case</item>
        <item>Recoil Case</item>
    </string-array>

    // portfolio

    <string-array name="currency_array">
        <item>USD</item>
        <item>RUB</item>
    </string-array>

    // common
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descriptionExample">The Chroma Case is a weapon case consisting of 14 community-designed weapon skins released as part of the January 8, 2015 update. It requires a Chroma Case Key to be opened. The Chroma Case also has six exclusive community created knife finishes: Damascus Steel, Doppler, Marble Fade, Tiger Tooth, Rust Coat, and Ultraviolet. The Spectrum Case and Spectrum 2 Case includes these Chroma finishes on the Huntsman Knife, Butterfly Knife, Falchion Knife, Shadow Daggers and the Bowie Knife. The Prisma Case contains these Chroma finishes on the Navaja Knife, Stiletto Knife, Talon Knife, and the Ursus Knife.</string>
    <string name="nav_to_home_screen">Home</string>
    <string name="add_case_name_hint">Type in case name</string>
    <string name="add_case_number_of_cases_hint">Type in number of cases you purchased</string>
    <string name="add_case_purchase_price_hint">Type in purchase price for each case</string>
    <string name="case_portfolio_header_profit_loss">Profit / Loss</string>
    <string name="case_portfolio_header_overall_value">Overall Value</string>
    <string name="case_portfolio_header_price">Price</string>
    <string name="case_portfolio_header_amount">Amount</string>
    <string name="case_portfolio_header_case">Case Name</string>
    <string name="choose_currency_button">Choose Currency</string>
    <string name="add_case_button">Add Case</string>
    <string name="sorting_button">Sorting</string>
    <string name="details_button">Details</string>
    <string name="loading">LOADING</string>
    <string name="errorIconDesc">errorIcon</string>


</resources>
