<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/caseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="CaseName" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/caseImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toStartOf="@id/lowestPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caseName"
        fresco:actualImageScaleType="fitCenter"
        tools:background="@color/black" />


    <TextView
        android:id="@+id/lowestPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@id/volume"
        app:layout_constraintStart_toEndOf="@id/caseImage"
        app:layout_constraintTop_toBottomOf="@+id/caseName"
        tools:text="@string/case_lowest_price" />

    <TextView
        android:id="@+id/volume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@id/medianPrice"
        app:layout_constraintStart_toEndOf="@id/caseImage"
        app:layout_constraintTop_toBottomOf="@+id/lowestPrice"
        tools:text="@string/case_volume" />

    <TextView
        android:id="@+id/medianPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/caseImage"
        app:layout_constraintStart_toEndOf="@id/caseImage"
        app:layout_constraintTop_toBottomOf="@+id/volume"
        tools:text="@string/case_median_price" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/caseImage" />


</androidx.constraintlayout.widget.ConstraintLayout>
