<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Portfolio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".presentation.view.fragments.portfolio.PortfolioFragment">


    <View
        android:id="@+id/topLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/totalValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalValue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/portfolio_total_value"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/bottomLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLine" />

    <View
        android:id="@+id/bottomLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/totalValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addCaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:backgroundTint="@color/primaryColor"
        android:contentDescription="Add Case"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="@id/detailsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailsButton" />

    <Button
        android:id="@+id/detailsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="Portfolio Details"
        app:layout_constraintBottom_toTopOf="@+id/caseNameHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barChartPortfolioValue" />


    <Button
        android:id="@+id/caseNameHeader"
        style="@style/portfolioHeaderButton"
        android:text="@string/case_portfolio_header_case"
        app:layout_constraintBottom_toTopOf="@id/itemCaseRecyclerView"
        app:layout_constraintEnd_toStartOf="@id/caseAmountHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsButton" />


    <Button
        android:id="@+id/caseAmountHeader"
        style="@style/portfolioHeaderButton"
        android:text="@string/case_portfolio_header_amount"
        app:layout_constraintBottom_toBottomOf="@id/caseNameHeader"
        app:layout_constraintEnd_toStartOf="@id/casePriceHeader"
        app:layout_constraintStart_toEndOf="@id/caseNameHeader"
        app:layout_constraintTop_toTopOf="@id/caseNameHeader" />


    <Button
        android:id="@+id/casePriceHeader"
        style="@style/portfolioHeaderButton"
        android:text="@string/case_portfolio_header_price"
        app:layout_constraintBottom_toBottomOf="@id/caseNameHeader"
        app:layout_constraintEnd_toStartOf="@id/caseOverallValueHeader"
        app:layout_constraintStart_toEndOf="@id/caseAmountHeader"
        app:layout_constraintTop_toTopOf="@id/caseNameHeader" />


    <Button
        android:id="@+id/caseOverallValueHeader"
        style="@style/portfolioHeaderButton"
        android:text="@string/case_portfolio_header_overall_value"
        app:layout_constraintBottom_toBottomOf="@id/caseNameHeader"
        app:layout_constraintEnd_toStartOf="@id/caseProfitLossHeader"
        app:layout_constraintStart_toEndOf="@id/casePriceHeader"
        app:layout_constraintTop_toTopOf="@id/caseNameHeader" />


    <Button
        android:id="@+id/caseProfitLossHeader"
        style="@style/portfolioHeaderButton"
        android:text="@string/case_portfolio_header_profit_loss"
        app:layout_constraintBottom_toBottomOf="@id/caseNameHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/caseOverallValueHeader"
        app:layout_constraintTop_toTopOf="@id/caseNameHeader" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemCaseRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caseNameHeader"
        tools:listitem="@layout/item_case_portfolio" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChartPortfolioValue"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomLine" />

<!--    <com.github.mikephil.charting.charts.PieChart-->
<!--        android:id="@+id/pieChartPortfolioValue"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="320dp"-->
<!--        android:layout_margin="4dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/bottomLine" />-->

    <include
        android:id="@+id/errorView"
        layout="@layout/error_view"
        android:visibility="gone" />

    <include
        android:id="@+id/loadingView"
        layout="@layout/loading_view"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>
