<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".presentation.view.fragments.casedetails.CaseDetailsFragment">


    <TextView
        android:id="@+id/caseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintHorizontal_bias="0.5"
        fresco:layout_constraintStart_toStartOf="parent"
        fresco:layout_constraintTop_toTopOf="parent"
        tools:text="CaseName" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/caseImage"
        android:layout_width="160dp"
        android:layout_height="160dp"
        fresco:actualImageScaleType="fitCenter"
        fresco:layout_constraintStart_toStartOf="parent"
        fresco:layout_constraintTop_toBottomOf="@id/caseName"
        tools:background="@color/black" />


    <TextView
        android:id="@+id/monthlyAvgReturnInPercentDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintStart_toStartOf="parent"
        fresco:layout_constraintTop_toBottomOf="@id/separatorOne"
        tools:text="@string/monthly_avg_return_in_percent" />

    <TextView
        android:id="@+id/monthlyAvgReturnInRubDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintStart_toStartOf="parent"
        fresco:layout_constraintTop_toBottomOf="@id/monthlyAvgReturnInPercentDetails"
        tools:text="@string/monthly_avg_return_in_rub" />

    <TextView
        android:id="@+id/monthlyStandardDeviationDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintStart_toStartOf="parent"
        fresco:layout_constraintTop_toBottomOf="@+id/monthlyAvgReturnInRubDetails"
        tools:text="@string/monthly_standard_deviation" />

    <TextView
        android:id="@+id/monthlySharpRatioDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintStart_toStartOf="parent"
        fresco:layout_constraintTop_toBottomOf="@+id/monthlyStandardDeviationDetails"
        tools:text="@string/monthly_sharp_ratio" />


    <View
        android:id="@+id/separatorOne"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/white"
        fresco:layout_constraintBottom_toTopOf="@id/monthlyAvgReturnInPercentDetails"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintStart_toStartOf="parent"
        fresco:layout_constraintTop_toBottomOf="@id/caseImage" />

    <View
        android:id="@+id/separatorTwo"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/white"
        fresco:layout_constraintBottom_toBottomOf="parent"
        fresco:layout_constraintEnd_toEndOf="parent"

        fresco:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

