<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentStart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <Button
        android:id="@+id/currencyChangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/button_background"
        android:padding="8dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backgroundCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_backgroundcircle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backgroundCircleTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_backgroundcircletwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/frontPageImage"
        android:layout_width="280dp"
        android:layout_height="240dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_frontpageimg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <TextView
        android:id="@+id/frontPageTextSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/front_page_slogan"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frontPageImage"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/caseOverviewButton"
        style="@style/mainMenuButton"
        android:text="@string/front_page_case_overview_button"
        app:layout_constraintBottom_toTopOf="@id/caseAnalyticsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frontPageTextSlogan"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/caseAnalyticsButton"
        style="@style/mainMenuButton"
        android:text="@string/front_page_analytics_button"
        app:layout_constraintBottom_toBottomOf="@id/casePortfolioButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caseOverviewButton" />

    <Button
        android:id="@+id/casePortfolioButton"
        style="@style/mainMenuButton"
        android:text="@string/front_page_portfolio_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caseAnalyticsButton"
        app:layout_constraintVertical_bias="0" />

    <include
        android:id="@+id/errorView"
        layout="@layout/error_view"
        android:visibility="gone" />

    <include
        android:id="@+id/loadingView"
        layout="@layout/loading_view"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>