<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.csgocaseswatcherapp.screens.portfoliodetails.view.PortfolioDetailsFragment">


    <TextView
        android:id="@+id/caseNameTextView"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintHorizontal_bias="0.5"
        fresco:layout_constraintStart_toStartOf="@id/caseImageView"
        fresco:layout_constraintTop_toTopOf="parent"
        tools:text="CaseName" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/caseImageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        fresco:actualImageScaleType="fitCenter"
        android:layout_marginStart="8dp"
        fresco:layout_constraintStart_toStartOf="parent"
        fresco:layout_constraintTop_toBottomOf="@id/caseNameTextView"
        tools:background="@color/black" />


    <TextView
        android:id="@+id/lowestPriceTextView"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        fresco:layout_constraintBottom_toTopOf="@id/volumeTextView"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintStart_toEndOf="@id/caseImageView"
        fresco:layout_constraintTop_toTopOf="@id/caseImageView"
        tools:text="@string/case_lowest_price" />

    <TextView
        android:id="@+id/volumeTextView"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        fresco:layout_constraintBottom_toTopOf="@id/medianPriceTextView"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintStart_toEndOf="@id/caseImageView"
        fresco:layout_constraintTop_toBottomOf="@id/lowestPriceTextView"
        tools:text="@string/case_volume" />

    <TextView
        android:id="@+id/medianPriceTextView"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        fresco:layout_constraintBottom_toTopOf="@id/releaseDateTextView"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintStart_toEndOf="@id/caseImageView"
        fresco:layout_constraintTop_toBottomOf="@id/volumeTextView"
        tools:text="@string/case_median_price" />

    <TextView
        android:id="@+id/releaseDateTextView"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        fresco:layout_constraintBottom_toTopOf="@id/dropStatusTextView"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintStart_toEndOf="@id/caseImageView"
        fresco:layout_constraintTop_toBottomOf="@id/medianPriceTextView"
        tools:text="@string/case_release_date" />

    <TextView
        android:id="@+id/dropStatusTextView"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        fresco:layout_constraintBottom_toBottomOf="@id/caseImageView"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintStart_toEndOf="@id/caseImageView"
        fresco:layout_constraintTop_toBottomOf="@id/releaseDateTextView"
        tools:text="@string/case_drop_status" />

    <View
        android:id="@+id/descriptionSeparatorOne"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/black"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintStart_toStartOf="parent"
        fresco:layout_constraintBottom_toTopOf="@id/descriptionTextView"
        fresco:layout_constraintTop_toBottomOf="@id/caseImageView" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:justificationMode="inter_word"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text = "adadadasdadasdadadadasdadadadasdasdadasdasdasdasdasdasdasddad"
        fresco:layout_constraintBottom_toTopOf="@+id/descriptionSeparatorTwo"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintStart_toStartOf="parent"
        fresco:layout_constraintTop_toBottomOf="@id/caseImageView" />

    <View
        android:id="@+id/descriptionSeparatorTwo"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/black"
        fresco:layout_constraintBottom_toBottomOf="parent"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintStart_toStartOf="parent"
        fresco:layout_constraintTop_toBottomOf="@id/descriptionTextView" />

    <include
        android:id="@+id/loadingView"
        layout="@layout/loading_view"
        android:visibility="gone" />





</androidx.constraintlayout.widget.ConstraintLayout>

